Modifs terminees dapres moi

--- a/Manuscrit/main.org
+++ b/Manuscrit/main.org
@@ -447,7 +447,7 @@ La fonction objectif cherche naturellement à réduire les variables d'écart $\
 \end{cases}
 \label{eq:margin}
 \end{equation}
-permet de donner aux choix de l'expert un score strictement supérieur aux scores des autres choix. \citet{taskar2005learning} précisent qu'il est possible d'adapter la marge $\margin$ en fonction de la qualité des choix alternatifs, un bon choix correspondant à une petite marge. Nous verrons qu'en pratique la marge binaire que nous venons de suggérer fonctionne assez bien pour les problèmes qui nous intéressent.
+permet de donner aux choix de l'expert un score strictement supérieur aux scores des autres choix. \citet{taskar2005learning} précisent qu'il est possible d'adapter la marge $\margin$ en fonction de la qualité des choix alternatifs, un bon choix correspondant à une petite marge. Nous verrons qu'en pratique la marge binaire que nous venons de suggérer fonctionne assez bien pour les problèmes qui nous intéressent. Il est possible d'ajouter un terme de régularisation à la fonction objectif si le besoin s'en fait sentir.
 
 La résolution informatique d'un problème d'optimisation convexe sous contraintes étant malaisée, nous en cherchons une formulation plus simple (qui revient à celle employée dans \citep{ratliff2007imitation}) en constatant que lorsque les variables d'écart sont minimisées, elles sont égales aux violations des contraintes :
 \begin{equation}
@@ -499,12 +499,10 @@ Il existe bien d'autres moyens de faire de la classification, comme par exemple 
 *** \glsentrytext{svm}
 # <<hier:svm>>
 
-    Une \gls{svm} est un séparateur linéaire. Plus précisément, une \gls{svm} va chercher, dans l'espace $\statespace$, l'hyperplan de marge maximale séparant les données : d'un côté de l'hyperplan se trouvent tous les états qui dans la base d'exemples sont associés à une certaine action $\action_1$, et de l'autre côté se trouvent les états associés à l'autre action $\action_2$. La notion de marge que nous utilisons dans cette sous-section diffère de celle utilisée dans la sous-section précédente[fn::Dans les publications anglophones, ces deux concepts différents sont tous deux appelés /margin/.].
-    - La /marge structurée/ de \citeauthor{taskar2005learning} impose une structure aux différentes actions en permettant d'établir un classement différenciant l'action choisie par l'expert des autres actions.
-    - La marge d'une SVM a une interprétation géométrique. En la maximisant, on maximise une notion de distance entre l'hyperplan séparateur et les points de données.
+    Une \gls{svm} est un séparateur linéaire. Plus précisément, une \gls{svm} va chercher, dans l'espace de description des entrées, l'hyperplan de marge maximale séparant les données : d'un côté de l'hyperplan se trouvent toutes les entrées associées à une certaine étiquette, et de l'autre côté se trouvent les entrées associées à l'autre étiquette. Il faut positionner l'hyperplan dans l'espace de description de manière à maximiser la marge entre celui-ci et les données.
 
 # ?s kernel '\kappa' 'Noyau pour une SVM'
-    C'est un vœu pieux de croire que l'espace $\statespace$ est construit d'une manière qui permette à un hyperplan de séparer les exemples sans erreur. Le classifieur à fonction de score paramétrée linéairement que nous avons décrit précédemment compense cela par une projection dans un espace d'attributs $\featurestateactionspace$. Les \gls{svm} utilisent une technique similaire, appelée l'astuce du noyau \citep{aizerman1964theoretical,boser1992training}. L'idée est de remplacer les produits scalaires $\scalarprod{\state}{\state'}_{\statespace}$ qui apparaissent dans l'algorithme par un produit scalaire $\scalarprod{\featurestatefunc(\state)}{\featurestatefunc(\state')}_{\Psi}$ dans l'espace d'attributs $\Psi$, dans l'espoir que les données soient linéairement séparables dans cet espace d'attributs. L'astuce est d'observer que les données n'apparaissent dans l'algorithme que par le biais de leur produit scalaire ; plutôt que de définir explicitement cet attribut $\featurestatefunc$ et de calculer le produit scalaire associé, un noyau $\kernel$ est défini. Pour peu que $\kernel$ satisfassent certaines conditions[fn::\`A savoir être continu, symétrique et semi-défini positif.], alors il existe \citep{mercer1909functions} une fonction $\featurestatefunc$ telle que [fn::Le noyau $\kappa$ engendre un /Reproducing Kernel Hilbert Space/ (RKHS) \citep{berlinet2004reproducing}.]:
+    C'est un vœu pieux de croire que l'espace de description est construit d'une manière qui permette à un hyperplan de séparer les exemples sans erreur. Le classifieur à fonction de score paramétrée linéairement que nous avons décrit précédemment compense cela par une projection dans un espace d'attributs $\featurestateactionspace$. Les \gls{svm} utilisent une technique similaire, l'idée est de remplacer les produits scalaires $\scalarprod{\state}{\state'}_{\statespace}$ qui apparaissent dans l'algorithme par un produit scalaire $\scalarprod{\featurestatefunc(\state)}{\featurestatefunc(\state')}_{\Psi}$ dans l'espace d'attributs $\Psi$, dans l'espoir que les données soient linéairement séparables dans cet espace d'attributs. L'astuce, dite astuce du noyau \citep{aizerman1964theoretical,boser1992training} est d'observer que les données n'apparaissent dans l'algorithme que par le biais de leur produit scalaire ; plutôt que de définir explicitement cet attribut $\featurestatefunc$ et de calculer le produit scalaire associé, un noyau $\kernel$ est défini. Pour peu que $\kernel$ satisfassent certaines conditions[fn::\`A savoir être continu, symétrique et semi-défini positif.], alors il existe \citep{mercer1909functions} une fonction $\featurestatefunc$ telle que [fn::Le noyau $\kappa$ engendre un /Reproducing Kernel Hilbert Space/ (RKHS) \citep{berlinet2004reproducing}.]:
 \begin{equation}
 \kernel(\state,\state') = \scalarprod{\featurestatefunc(\state)}{\featurestatefunc(\state')}_{\Psi}.
 \end{equation} 
@@ -517,7 +515,8 @@ permet de manipuler le produit scalaire $\scalarprod{\featurestatefunc(\state)}{
 
 Le modèle que nous venons de décrire est celui de la \gls{svm} à marge dure \citep{boser1992training}. Il est possible d'augmenter la capacité de généralisation de la \gls{svm} en introduisant des variables d'écart. On passe alors au modèle de la \gls{svm} à marge douce \citep{cortes1995support}.
 
-Les choses se complexifient bien sûr quand il y a plus de deux actions (voir \citep{guermeur2012generic} pour un modèle générique correspondant à ce cas, appelé cas multi-classe) mais pour simplifier l'exposé nous nous sommes cantonné au cas bi-classe.
+Les choses se complexifient bien sûr quand il y a plus de deux actions (voir \citep{guermeur2012generic} pour un modèle générique correspondant à ce cas, appelé cas multi-classe) mais pour simplifier l'exposé nous nous sommes cantonné au cas bi-classe. Pour l'imitation, il faut utiliser une M-SVM (\gls{svm} Multi-classe), où l'espace de description est l'espace d'état $\statespace$ et où les étiquettes sont les actions. Le classifieur à marge de la sous-section précédente peut être instancié (si l'on choisit la bonne marge et la bonne régularisation) comme un cas particulier d'une \gls{svm}, mais les deux modèles ne sont pas équivalents dans leur forme générique.
+
 
 Les \gls{svm} sont très populaires et plusieurs implémentations existent. Il est donc facile de les mettre en œuvre sur les problèmes jouet que nous allons traiter ; ce sont des modèles qui fonctionnent assez bien avec un réglage de méta-paramètres minimal.
 # Goal: Faire une description rapide des MCSVM et de leurs avantages.
