Envoi aux trois

--- a/Manuscrit/titlepage.tex
+++ b/Manuscrit/titlepage.tex
@@ -31,13 +31,13 @@
 \noindent \textbf{Membres du jury}\noindent\\ \noindent
 \begin{tabularx}{18cm}{p{3.5cm}p{4cm}p{10.5cm}}
 Directeur de thèse & Dr. Yann Guermeur &\small{Directeur de recherche, Equipe ABC, Loria-CNRS -- Nancy}\\
-Co-directeur de thèse &Dr. Matthieu Geist &\small{Directeur de recherche, Equipe IMS-MaLIS, Supélec -- Metz}\\
+Co-directeur de thèse &Dr. Matthieu Geist &\small{Enseignant-chercheur, Equipe IMS-MaLIS, Supélec -- Metz}\\
  Rapporteurs&Dr. Rachid Alami &\small{Directeur de recherche, LAAS /  CNRS -- Toulouse}\\
  &Prof. Brahim  Chaib-draa&\small{Professeur, DAMAS, Université Laval -- Québec}\\ 
 Examinateurs &Prof. Sylvain Contassot-Vivier&\small{Professeur, Loria-Université de Lorraine -- Nancy}\\
 &Dr. Guillaume Laurent&\small{Maître de conférences, Institut FEMTO-ST / ENSMM -- Besançon}\\
  &Dr. Manuel Lopes&\small{Chargé de recherche, Equipe Flowers, INRIA -- Bordeaux}\\
-&Dr. Olivier Pietquin &\small{Directeur de recherche, Equipe IMS-MaLIS / UMI 2958, Supélec -- Metz}
+&Dr. Olivier Pietquin &\small{Enseignant-chercheur, Equipe IMS-MaLIS / UMI 2958, Supélec -- Metz}
 \end{tabularx}
 
 \vspace{4em}
