--- a/Manuscrit/Biblio.bib
+++ b/Manuscrit/Biblio.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Edouard KLEIN at 2013-08-02 12:41:27 +0200 
+%% Created for Edouard KLEIN at 2013-08-12 00:31:17 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cohn1996active,
+	Author = {Cohn, David A and Ghahramani, Zoubin and Jordan, Michael I},
+	Date-Added = {2013-08-11 22:30:05 +0000},
+	Date-Modified = {2013-08-11 22:30:24 +0000},
+	Journal = {Journal of Artificial Intelligence Research},
+	Publisher = {AI Access Foundation},
+	Title = {Active learning with statistical models},
+	Year = {1996}}
+
+@phdthesis{bonidal2013analyse,
+	Author = {R{\'e}mi Bonidal},
+	Date-Added = {2013-08-11 22:23:02 +0000},
+	Date-Modified = {2013-08-11 22:23:33 +0000},
+	School = {Universit{\'e} de Lorraine},
+	Title = {Analyse des syst{\`e}mes discriminants multi-classes {\`a} grande marge},
+	Year = {2013}}
 
 @article{ghavamzadeh2010lstd,
 	Author = {Ghavamzadeh, Mohammad and Lazaric, Alessandro and Maillard, Odalric-Ambrym and Munos, R{\'e}mi},
