Corrections Brahim : Réécriture section 7.2 perspectives de recherche

--- a/Manuscrit/Biblio.bib
+++ b/Manuscrit/Biblio.bib
@@ -2,12 +2,65 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Edouard KLEIN at 2013-08-12 00:31:17 +0200 
+%% Created for Edouard KLEIN at 2013-09-17 18:10:37 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{lauer2011msvmpack,
+	Author = {Lauer, Fabien and Guermeur, Yann and others},
+	Date-Added = {2013-09-17 14:40:42 +0000},
+	Date-Modified = {2013-09-17 14:40:42 +0000},
+	Journal = {Journal of Machine Learning Research},
+	Pages = {2269--2272},
+	Title = {MSVMpack: a multi-class support vector machine package},
+	Volume = {12},
+	Year = {2011}}
+
+@article{chang2011libsvm,
+	Author = {Chang, Chih-Chung and Lin, Chih-Jen},
+	Date-Added = {2013-09-17 14:39:24 +0000},
+	Date-Modified = {2013-09-17 14:39:24 +0000},
+	Journal = {ACM Transactions on Intelligent Systems and Technology (TIST)},
+	Number = {3},
+	Pages = {27},
+	Publisher = {ACM},
+	Title = {LIBSVM: a library for support vector machines},
+	Volume = {2},
+	Year = {2011}}
+
+@book{chapelle2006semi,
+	Author = {Chapelle, Olivier and Sch{\"o}lkopf, Bernhard and Zien, Alexander and others},
+	Date-Added = {2013-09-17 13:20:26 +0000},
+	Date-Modified = {2013-09-17 13:20:26 +0000},
+	Publisher = {MIT press Cambridge},
+	Title = {Semi-supervised learning},
+	Volume = {2},
+	Year = {2006}}
+
+@inproceedings{piot2013learning,
+	Abstract = {TBD},
+	Address = {Prague (Czech Republic)},
+	Author = {Bilal Piot and Matthieu Geist and Olivier Pietquin},
+	Booktitle = {{Proceedings of the European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML/PKDD 2013)}},
+	Date-Added = {2013-09-17 13:11:15 +0000},
+	Date-Modified = {2013-09-17 16:10:37 +0000},
+	Month = {September},
+	Title = {{Learning from demonstrations: Is it worth estimating a reward function?}},
+	Year = {2013}}
+
+@article{bellemare12arcade,
+	Author = {{Bellemare}, M.~G. and {Naddaf}, Y. and {Veness}, J. and {Bowling}, M.},
+	Date-Added = {2013-09-16 16:05:08 +0000},
+	Date-Modified = {2013-09-16 16:05:08 +0000},
+	Journal = {Journal of Artificial Intelligence Research},
+	Month = 06,
+	Pages = {253--279},
+	Title = {The Arcade Learning Environment: An Evaluation Platform for General Agents},
+	Volume = 47,
+	Year = 2013}
 
 @article{cohn1996active,
 	Author = {Cohn, David A and Ghahramani, Zoubin and Jordan, Michael I},
