--- a/Manuscrit/main.org
+++ b/Manuscrit/main.org
@@ -1954,9 +1954,19 @@ Les systèmes réels sont souvent fragiles et interagir avec peut être coûteux
 
 # %Les trois contributions ont ceci de commun qu'elles peuvent fonctionner en conditions à peu de données, mais elles peuvent faire usage très facilement de savoir à priori si on en a. Donc SCIRL et CSI sont non seulement les deux seules qui semblent fonctionner de manière générique dans les situations à la con, mais pour les situations encore plus à la con on peut espérer utiliser des méthodes /ad-hoc/ pour aller encore plus loin. (Selon les sous routines qu'on choisit, on peut même utiliser des experts non optimaux : les samples optimaux sont balancés en vracs dans DE, on s'en sortira, les non optimaux dans Dsim, on pourra quand même les exploiter.)
 ** Perspectives de recherche 
-Les deux nouveaux algorithmes d'\gls{irl} que nous proposons disposent de garanties théoriques et une étude empirique illustre le fait qu'ils sont plus performants que les méthodes de l'état de l'art. Il serait souhaitable de renforcer cette étude empirique en les appliquant à d'autres problèmes, que ce soit des problèmes déjà résolus par d'autres méthodes, à des fins comparatives, ou des problèmes ouverts. Notamment, deux domaines ont commencé à être explorés, mais les travaux n'ont pu être menés à terme et de fait n'apparaissent pas dans ce manuscrit. Le premier est l'/Arcade Learning Environment/ (ALE) : il s'agit d'un émulateur d'Atari 2600 permettant de jouer à une vaste collection de jeux vidéos. Le second est l'application d'algorithmes d'\gls{irl} à la commande d'un bras robot à partir de signaux issus d'une interface cerveau/machine (/Brain Computer Interface/, BCI)[fn::Voir la \autoref{hier-autrestravaux} pour une description des travaux effectués sur la BCI.].  Dans ces deux cas, la difficulté n'est pas dans l'application des algorithmes d'\gls{irl} eux-même, mais dans l'optimisation de la récompense qu'ils trouvent afin d'obtenir une politique de contrôle. Nous avons dans nos travaux considéré que cette étape ne posait pas problème, afin de nous concentrer sur le problème de l'\gls{irl} tel qu'envisagé par la communauté. L'application à des problèmes pratiques doit faire face à l'optimisation de la récompense, il faut alors faire appel à des méthodes de l'état de l'art en \gls{rl} et des adaptations /ad-hoc/ au problème (par exemple dans le choix des attributs).
+Les deux nouveaux algorithmes d'\gls{irl} que nous proposons disposent de garanties théoriques et une étude empirique illustre le fait qu'ils sont plus performants que les méthodes de l'état de l'art. \`A notre connaissance aucune méthode d'\gls{irl} actuelle n'est en mesure de fonctionner dans le cadre extrêmement contraint dans lequel nous avons testé nos approches, où la politique de l'expert et la dynamique du système ne sont connues qu'à travers une base de données recueillies par l'expert[fn::Rappelons que \gls{relent} dispose d'échantillons recueillis par une politique aléatoire, tandis que \gls{scirl} et \gls{cascading} utilisent chacun une heuristique qui leur permettent de fonctionner en n'utilisant que les données de l'expert.].
+
+Il serait souhaitable de poursuivre cette étude empirique selon deux axes. Tout d'abord il faudrait appliquer nos algorithmes à des problèmes déjà résolus par d'autres méthodes, à des fins comparatives et dans le but de mieux comprendre leur comportement. Cela permettrait notamment d'en cerner les limites et les conditions idéales d'application, ouvrant la voie à des avancées selon le second axe qui consiste à appliquer nos méthodes à des problèmes concrets où l'utilisation d'algorithmes d'apprentissage statistique n'a jusqu'à présent pas été tentée ou n'a pas donnée de bons résultats.
+
+L'étude du comportement empirique de \gls{scirl} et \gls{cascading} doit non seulement être menée sur des problèmes plus nombreux et plus divers que ceux utilisés ici, mais doit également mettre en jeu plusieurs implémentations de nos algorithmes d'\gls{irl}, différants par le choix des sous-routines. En effet, les garanties théoriques proposées (qui ne prennent pas l'heuristique en compte mais supposent un cadre peu contraint, où des données échantillonnant tout le \gls{mdp} et non la seule politique experte sont disponibles) ne présupposent pas l'emploi d'un classifieur à fonction de score (linéaire pour \gls{scirl}), d'un schéma d'estimation de l'attribut moyen (pour \gls{scirl}) ou d'un régresseur (pour \gls{cascading}) particulier, mais traitent de la propagation des erreurs induites par ces éléments. En pratique, une vaste gamme de techniques d'apprentissage supervisé peut être utilisée (particulièrement pour \gls{cascading}) pour limiter ces erreurs. Il serait intéressant de découvrir dans quelle mesure cette marge de manœuvre permet en pratique à nos algorithmes de s'adapter au problème qui leur est soumis.
+
+Deux domaines correspondant à chacun des deux axes de développement de l'étude emprique de nos algorithmes d'\gls{irl} ont commencé à être explorés, mais les travaux n'ont pu être menés à terme et de fait ne sont que mentionnés dans ce manuscrit. Le premier est l'/Arcade Learning Environment/ (ALE) : il s'agit d'un émulateur d'Atari 2600 permettant de jouer à une vaste collection de jeux vidéos. Il est d'ores et déjà possible d'appliquer des algorithmes d'\gls{rl} afin d'apprendre une politique de contrôle maximisant le score \citep{bellemare12arcade}. Il reste à régler des problèmes techniques relatifs au remplacement de ce score par la récompense issue de l'exécution d'un algorithme d'\gls{irl}. Le second est l'application d'algorithmes d'\gls{irl} à la commande d'un bras robot à partir de signaux issus d'une interface cerveau/machine (/Brain Computer Interface/, BCI)[fn::Voir la \autoref{hier-autrestravaux} pour une description des travaux effectués sur la BCI.].  Dans ces deux cas, la difficulté n'est pas dans l'application des algorithmes d'\gls{irl} eux-même, mais dans l'optimisation de la récompense qu'ils trouvent afin d'obtenir une politique de contrôle. Nous avons pour les travaux exposés dans ce manuscrit considéré que cette étape ne posait pas problème, afin de nous concentrer sur le problème de l'\gls{irl} tel qu'envisagé par la communauté. L'application à des problèmes plus complexes que ceux qui constituent notre étude empirique doit faire face à l'optimisation de la récompense, il faut alors faire appel à des méthodes de l'état de l'art en \gls{rl} et des adaptations /ad-hoc/ au problème (par exemple dans le choix des attributs).
 
 Pour remédier de manière plus générale à ce problème[fn::Qui n'affecte pas les approches supervisées.], nous pourrions également tenter de développer un cadre pour les algorithmes d'\gls{irl} dans lequel l'optimisation finale de la récompense est simplifiée ou contournée. La politique de classification du classifieur paramétré par l'attribut moyen de l'expert qui constitue \gls{scirl} est par exemple une bonne politique de départ pour un algorithme d'\gls{rl} en ligne. Les données nécessaires à l'apprentissage de la politique de contrôle (dont \gls{scirl} n'a pas besoin, grâce à son heuristique, pour trouver la récompense) pourraient alors être recueillies par la politique de classification, qui convergerait alors petit à petit grâce à l'algorithme d'\gls{rl} en ligne vers la politique optimale pour la récompense trouvée par \gls{scirl}. La politique issue de la première étape supervisée de \gls{cascading} pourrait être utilisée de la même manière. Il est également possible de poursuivre l'approche envisagée dans \citep{geist2013cascading}, consistant à instancier \gls{cascading} avec une \gls{svm} et une SVR et à réunir les deux problèmes d'optimisation en un seul, dont la résolution permettrait d'obtenir directement une politique prenant en compte la structure de la récompense.
+
+La découverte d'une fonction de récompense cohérente avec le comportement de l'expert reste cependant un problème intéressant en soi. Lorsque les attributs $\phi_R$ en jeu dans l'approximation linéaire de la récompense ont une valeur sémantique, il est possible d'utiliser l'\gls{irl} pour découvrir et analyser les motivations d'un agent. Les nouveaux algorithmes d'\gls{irl} que nous proposons pourraient donc se montrer utiles pour poursuivre des travaux de ce type entrepris en économie \citep{sargent1978estimation,rust1994people} ou en biologie \citep{montague1995bee,doya1995novel}. Au delà de l'intérêt sémantique de la récompense des travaux très récents \citep{piot2013learning} exhibent une contradiction entre intuition théorique et résultats pratiques. Selon les résultats théoriques l'étape d'optimisation approximative de la récompense introduit des erreurs qui pénalisent la performance de l'imitation par le biais de l'\gls{irl} par rapport à l'imitation supervisée. Empiriquement, trouver une récompense puis l'optimiser peut permettre de meilleures performances en imitation que les méthodes supervisées, particulièrement si la récompense est peu informative. Dans le cas d'un changement de dynamique entre le moment où l'expert effectue sa démonstration et celui où l'agent le remplace (cas qui sort du cadre de l'étude théorique), l'avantage de l'\gls{irl} devient encore plus clair, l'optimisation de la fonction de récompense permettant de s'adapter à la nouvelle dynamique.
+
+\`A plus long terme, la similitude entre fonction de score d'un classifieur et fonction de qualité d'un agent en \gls{rl}, qui est à la base de nos approches d'\gls{irl} \gls{scirl} et \gls{cascading}, pourrait être exploitée dans le cadre de la classification mutli-classe semi-supervisée. Cela permettrait soit de créer de nouveaux algorithmes, soit d'adapter les algorithmes existants à des cas où il existe une structure implicite dans les données à disposition, par exemple si la trace de l'expert est constituée d'une suite d'états, sans information explicite quant aux actions qu'il a choisies. Cela correspond notamment au cas où il est impossible d'observer l'expert "de l'intérieur" pour des raisons techniques[fn::Par exemple en biologie si l'expert est une hirondelle africaine.].
 
 Finalement, il faudrait intégrer l'\gls{rl} et l'\gls{irl} dans des systèmes informatiques réels aux mains d'utilisateurs non qualifiés. Cela nécessitera sans doute d'importants travaux concernant l'intégration de multiples algorithmes dans un schéma hiérarchique : avant d'apprendre à un robot à faire un mojito, il faut qu'il apprenne à saisir un verre et une bouteille. Mais lorsqu'on lui apprend la recette, on ne veut pas avoir à se soucier des détails de la saisie manuelle d'objet, on fonctionne à un niveau d'abstraction plus élevé. Il faut donc qu'une politique par exemple "Saisir un verre" faisant appel à des actions telles que "Fermer doigt 1 de la main gauche" et "Tourner poignet gauche dans le sens direct" puisse être utilisée directement comme une action par une politique de plus haut niveau, à côté d'actions telles que "Piler la glace" et "Placer la rondelle de citron". Il faudra également effectuer des progrès dans le domaine de l'interface homme/machine pour parvenir à gérer intuitivement des systèmes aussi complexes. Au-delà de l'aspect robotique grand public, les chercheurs et ingénieurs ont eux aussi beaucoup à gagner à manipuler intuitivement les machines, mais cela n'est pas facilement compatible avec la nécessité de rapidement changer de multiples paramètres.
  
